[package]
name = "log-file-processor"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels@landmark.co.uk>"]
edition = "2018"

[dependencies]
csv = "1"
glob = "0.2"
indicatif = "0.10.2"
rayon = "1.0.3"
regex = "1"
unicase = "2.2.0"

#needle = { git = "https://github.com/archer884/needle" }
#elapsed = "0.1"
#input-file-generator = { path = "input-file-generator" }

# Optimize the release mode builds as much as we can.
# Also see .cargo/config to make a cpu-native build.
[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "input-file-generator"
]
