[package]
name = "log-file-processor"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels@landmark.co.uk>"]
edition = "2018"

[dependencies]
csv = "1"
dirs = "1.0.4"
glob = "0.2"
indicatif = "0.10.2"
rayon = "1.0.3"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2.14"

#needle = { git = "https://github.com/archer884/needle" }
#input-file-generator = { path = "input-file-generator" }

# Optimize the release mode builds as much as we can.
# Also see .cargo/config to make a cpu-native build.
[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "input-file-generator"
]
